# Snippy

./: .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  snippet.rs
