[package]
name = "snippy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
crossterm = "0.25.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
tui = "0.19.0"
unicode-width = "0.1.9"
